Fix alert width on mobile devices.

--- a/_assets/css/main.css.scss
+++ b/_assets/css/main.css.scss
@@ -244,7 +244,7 @@ blockquote {
     h1 { font-size: 150%; }
     a.btn { padding: 10px 15px;}
   }
-  #contact-name, #contact-email, #contact-message, .alert {
+  #contact-name, #contact-email, #contact-message, .contact-alert {
     width: 100%;
   }
 }
